# migl

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/mi/: CMakeLists.txt  Camera.hpp  OffScreenRenderer.hpp  OpenGlUtility.hpp  Projector.hpp  glconf.hpp
samples/: Bmp.hpp  BmpImage.hpp  BmpImage.hpp~  CMakeLists.txt  CMakeLists.txt~  Window.hpp  Window.hpp~  offscreen.cpp  offscreen.cpp~  projection.cpp  projection.cpp~  viewer.cpp  viewer.cpp~
src/: CMakeLists.txt  Camera.cpp  OffScreenRenderer.cpp  OpenGlUtility.cpp  Projector.cpp
