CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)

PROJECT(migl)
#make package_source
SET(CPACK_PACKAGE_NAME, "${PROJECT}")
SET(CPACK_SOURCE_IGNORE_FILES, "/build/;.deps;*~;.o")
SET(CPACK_SOURCE_STRIP_FILES "src")
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "20140129")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}-src")
SET(serial "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(soserial "${CPACK_PACKAGE_VERSION_MAJOR}")
INCLUDE(CPack)


IF(APPLE)
   ADD_DEFINITIONS(-g -O3 -Wall)  
   INCLUDE_DIRECTORIES ( /System/Library/Frameworks ${PROJECT_SOURCE_DIR}/include /usr/local/include /usr/local/include/eigen3 )
   LINK_DIRECTORIES(/usr/local/lib)
   FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
   MARK_AS_ADVANCED (OpenGL_LIBRARY)
   SET(EXTRA_LIBS ${OpenGL_LIBRARY})
endif()
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(samples)

#elseif (WIN32)
#	set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
#	SET(CMAKE_INSTALL_PREFIX, "C:/Program Files/mi")
#	INCLUDE_DIRECTORIES(d:/usr/local/include )
	
#	if(CMAKE_SIZEOF_VOID_P EQUAL 8) # 64bit system
#		LINK_DIRECTORIES(d:/usr/local/lib/x64)
#	else()
#		LINK_DIRECTORIES(d:/usr/local/lib)
#	endif()
#endif()
ENABLE_TESTING()


