CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
#
# System requirements
#
find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
#
PROJECT(migl)

#make package_source
SET(CPACK_PACKAGE_NAME, "${PROJECT}")
SET(CPACK_SOURCE_IGNORE_FILES, "/build/;.deps;*~;.o")
SET(CPACK_SOURCE_STRIP_FILES "src")
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "20150403")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

SET(serial "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(soserial "${CPACK_PACKAGE_VERSION_MAJOR}")
INCLUDE(CPack)

IF(APPLE)
   FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
   ADD_DEFINITIONS(-g -O3 -Wall)  
   INCLUDE_DIRECTORIES (/System/Library/Frameworks ${PROJECT_SOURCE_DIR}/include /usr/local/include /usr/local/include/eigen3 )
   LINK_DIRECTORIES(/usr/local/lib)
   MARK_AS_ADVANCED (OpenGL_LIBRARY)
   SET(EXTRA_LIBS ${OpenGL_LIBRARY})
elseif (WIN32)
   set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
   set(CMAKE_BUILD_TYPE Release)
endif()

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(samples)

#ENABLE_TESTING()


